--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
         applicationId "jeongwookdongeun.easyqrcheckin"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 4
-        versionName "4.0"
-
+        versionCode 5
+        versionName "5.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.gms:play-services-ads:20.1.0'
+    implementation 'com.google.android.gms:play-services-base:17.5.0'
 }
